<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_my_zvonilniki"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:padding="16dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tvEmpty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_empty"
        android:padding="16dp"
        android:textColor="#6A6A6A"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnCreateFromList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_create"
        android:layout_margin="16dp"/>
</LinearLayout>
